--- a/Tournament_Tracker.ipynb
+++ b/Tournament_Tracker.ipynb
@@ -2,15 +2,52 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block (<ipython-input-86-8fa778961de9>, line 68)",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to Tournaments R Us\n",
+      "==========================\n",
+      "Enter the number of participants: 50\n",
+      "There are 50 participant slots ready for sign-ups.\n",
+      "Participant Menu\n",
+      "================\n",
+      "1. Sign Up\n",
+      "2. Cancel Sign Up\n",
+      "3. View Participants\n",
+      "4. Save Changes\n",
+      "5. Exit\n",
+      "Enter a number: 1\n",
+      "Participant Sign UP\n",
+      "===================\n",
+      "Participant Name: Minet Mucka\n",
+      "Desired starting slot #[1-50]: 2\n",
+      "Participant Menu\n",
+      "================\n",
+      "1. Sign Up\n",
+      "2. Cancel Sign Up\n",
+      "3. View Participants\n",
+      "4. Save Changes\n",
+      "5. Exit\n",
+      "Enter a number: 4\n",
+      "Save Changes\n",
+      "============\n",
+      "Save your changes to CSV? [y/n] y\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "I/O operation on closed file.",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-86-8fa778961de9>\"\u001b[1;36m, line \u001b[1;32m68\u001b[0m\n\u001b[1;33m    writer = csv.writer(outfile)\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block\n"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-145-ce6f24ddc2c3>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     67\u001b[0m             \u001b[0mstartingSlot\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'tournament_participants.csv'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'w'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     68\u001b[0m             \u001b[0mwriter\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcsv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreader\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtp\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 69\u001b[1;33m             \u001b[0mstartingSlot\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m{\u001b[0m\u001b[0mrows\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mrows\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mrows\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mreader\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     70\u001b[0m             \u001b[0mstartingSlot\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     71\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-145-ce6f24ddc2c3>\u001b[0m in \u001b[0;36m<dictcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m     67\u001b[0m             \u001b[0mstartingSlot\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'tournament_participants.csv'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'w'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     68\u001b[0m             \u001b[0mwriter\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcsv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreader\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtp\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 69\u001b[1;33m             \u001b[0mstartingSlot\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m{\u001b[0m\u001b[0mrows\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mrows\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mrows\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mreader\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     70\u001b[0m             \u001b[0mstartingSlot\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     71\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: I/O operation on closed file."
      ]
     }
    ],
@@ -81,10 +118,11 @@
     "        saveChoice = input(\"Save your changes to CSV? [y/n] \")\n",
     "\n",
     "        if saveChoice == \"y\": #account for case and exceptions\n",
-    "            with open('tournament_participants.csv', mode='w') as outfile:\n",
-    "            writer = csv.writer(outfile)\n",
+    "            startingSlot = open('tournament_participants.csv', 'w')\n",
+    "            writer = csv.reader(tp)\n",
     "            startingSlot = {rows[0]:rows[1] for rows in reader}\n",
-    "            \n",
+    "            startingSlot.close()\n",
+    "\n",
     "            count = count + 1\n",
     "\n",
     "    elif menuInput == 5:\n",
@@ -100,20 +138,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_items([('Paul Polsinelli', ' 1'), ('Minet Polsinelli', ' 2')])"
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import csv\n",
     "\n",
@@ -127,18 +154,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 141,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block (<ipython-input-61-f09dcf83690e>, line 8)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-61-f09dcf83690e>\"\u001b[1;36m, line \u001b[1;32m8\u001b[0m\n\u001b[1;33m    writer = csv.writer(outfile)\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "    if menuInput == 4:\n",
     "        print(\"Save Changes\")\n",
@@ -146,25 +164,27 @@
     "        saveChoice = input(\"Save your changes to CSV? [y/n] \")\n",
     "\n",
     "        if saveChoice == \"y\": #account for case and exceptions\n",
-    "            with open('tournament_participants.csv', mode='w') as outfile:\n",
-    "            writer = csv.writer(outfile)\n",
+    "            tp = open('tournament_participants.csv', 'w')\n",
+    "            writer = csv.reader(tp)\n",
     "            startingSlot = {rows[0]:rows[1] for rows in reader}\n",
+    "            tp.close()\n",
+    "\n",
     "            \n",
     "            count = count + 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict_items([])"
+       "dict_items([('1', 'Paul Polsinelli')])"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,10 +195,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 128,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'_csv.writer' object is not iterable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-128-14925ee7284d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'tournament_participants.csv'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'w'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0moutfile\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[0mwriter\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcsv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwriter\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0moutfile\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m     \u001b[0mstartingSlot\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m{\u001b[0m\u001b[0mrows\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mrows\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mrows\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mwriter\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: '_csv.writer' object is not iterable"
+     ]
+    }
+   ],
+   "source": [
+    "with open('tournament_participants.csv', mode='w') as outfile:\n",
+    "    writer = csv.writer(outfile)\n",
+    "    startingSlot = {rows[0]:rows[1] for rows in writer}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<_csv.reader at 0x2093f93f6a0>"
+      ]
+     },
+     "execution_count": 138,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reader"
+   ]
   }
  ],
  "metadata": {
