completed python basics assessment

--- a/Assessment_Python_Basics/Assessment Python Basics Incomplete.ipynb
+++ b/Assessment_Python_Basics/Assessment Python Basics Incomplete.ipynb
@@ -1091,17 +1091,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "vowelGuess = False\n",
+    "vowels = {\"a\", \"e\", \"i\", \"o\", \"u\"}\n",
+    "boughtVowel = \"i\"\n",
+    "for vowel in vowels:\n",
+    "    if boughtVowel == vowel:\n",
+    "        vowelGuess = True\n",
+    "    else:\n",
+    "        vowelGuess = False\n",
+    "print(vowelGuess)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['a', 'e', 'i', 'o', 'u']"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vowels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'u'"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "boughtVowel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'u', 'i', 'a', 'o', 'e'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(vowels)"
+   ]
   }
  ],
  "metadata": {
